--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.4.1"
   }
 }
