--- a/Desafio9/package.json
+++ b/Desafio9/package.json
@@ -9,12 +9,12 @@
     "faker": "^5.5.3",
     "knex": "^2.2.0",
     "natives": "^1.1.6",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.11"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
