--- a/Desafio11/package.json
+++ b/Desafio11/package.json
@@ -2,8 +2,9 @@
   "name": "desafiowebsocket",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -12,14 +13,15 @@
     "express-session": "^1.17.3",
     "knex": "^2.2.0",
     "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2",
     "natives": "^1.1.6",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.11"
   },
   "devDependencies": {},
-  "scripts": {
-    "start":"nodemon src/app.js"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
