--- a/Desafio11/package.json
+++ b/Desafio11/package.json
@@ -21,7 +21,10 @@
     "sqlite3": "^5.0.11"
   },
   "devDependencies": {},
-  "scripts": {},
+  "scripts": {
+    "start":"nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
