Desafio 13 Balanceo de Carga

--- a/Desafio13/nginx.config
+++ b/Desafio13/nginx.config
@@ -17,7 +17,7 @@ http {
     server {
     	listen 80;
         server_name nginx_server;
-        location /ecommerce { 
+        location / { 
                 proxy_pass http://node_app;
 	    }
         location /api/random {
