--- a/ProyectoFinal/package.json
+++ b/ProyectoFinal/package.json
@@ -1,19 +1,44 @@
 {
-  "name": "ProyectoFinal",
+  "name": "Proyecto Final Backend Coderhouse",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "express-handlebars": "^6.0.3",
+    "express-session": "^1.17.3",
+    "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.2.0",
+    "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
+    "koa-graphql": "^0.12.0",
+    "koa-mount": "^4.0.0",
+    "koa-router": "^12.0.0",
+    "log4js": "^6.6.1",
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.7.2",
+    "natives": "^1.1.6",
+    "nodemailer": "^6.8.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.3",
+    "sqlite3": "^5.0.11",
+    "winston": "^3.8.2"
+  },
   "scripts": {
-    "start": "nodemon src/app",
+    "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3",
-    "express-handlebars": "^6.0.2",
-    "multer": "^1.4.4",
-    "socket.io": "^4.4.1"
-  }
+  "description": ""
 }
